deploy/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infinity-app
  labels:
    app: infinity-deploy
spec:
  selector:
    matchLabels:
      app: app
      tier: frontend
  template:
    metadata:
      labels:
        app: app
        tier: frontend
    spec:
      containers:
        - name: app
          image: cervang/app:0.0.7
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "500mi"
