deploy/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: reseau-api
  labels:
    app: infinity-deploy
spec:
  ports:
    - port: 8080
  selector:
    app: api
    tier: backend
  clusterIP: None
