deploy/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cervangirard.me
      http:
        paths:
          - path: /
            backend:
              serviceName: infinity-app
              servicePort: 3838
